compilateurDeca/src/test/deca/context/invalid/objet/methods/method_call_wrong_arg_count.deca
// Description:
//    Test de contexte : Appel de méthode avec mauvais nombre d'arguments
//
// Resultats:
//    Erreur contextuelle : Nombre d'arguments incorrect
//
// Historique:
//    cree le 15/01/2026

class A {
    void m(int x) { }
}
{
    A a = new A();
    a.m(1, 2);
}
